@@ -137,6 +137,7 @@ Current development version: 3.28-13 (2018-12-20)
 - 13: Issue #651: Improved editing for include lists in diagram editor <2>
 - 13: Bugfix #652: Inconsistent drawing behaviour of include lists mended <2>
 - 13: Enh. #653: Reset button on Colors preferences dialog <2>
+- 13: Enh. #654: Current Arranger directory is now saved between sessions <2>
 
 Version 3.28 (2018-02-18)
 - 01: Bugfix #445: Array index out of bounds errors on COBOL import <2>
